--- a/src/main/webapp/WEB-INF/ftl/index.html
+++ b/src/main/webapp/WEB-INF/ftl/index.html
@@ -22,6 +22,7 @@
 					</div>
 					<ul class="nav navbar-nav">
 						<li><a href="/#!/igraci">Igraci</a></li>
+						<li><div></div></li>
 					</ul>
 				</div>
 			</nav>
