--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,8 +8,8 @@
 		<link href="/assets/css/bootstrap-theme.css" rel="stylesheet">
 		
 		
-		<script src="/assets/js/angular.min.js" type="text/javascript"></script>
-		<script src="/assets/js/angular-route.min.js"></script>
+		<script src="/assets/js/angular.js" type="text/javascript"></script>
+		<script src="/assets/js/angular-route.js"></script>
 		<script src="/app/js/main.js" type="text/javascript"></script>
 	</head>
 	<body>
